syntax = "proto2";

package com.zzh.protobuf;
option java_outer_classname = "Internal";

message InternalMsg
{
    required int32 version = 1;
    //协议版本号。第一版本：1，以此类推。

    required int64 id = 2;
    //消息id

    required Module from = 3;
    //发送模块

    required Module dest = 4;
    //接收模块

    required int64 createTime = 5;
    //发送时间

    required MsgType msgType = 6;
    //消息类型

    optional string msgBody = 7;
    //消息体

    enum Module {
        CONNECTOR = 0;
        TRANSFER = 1;
        CLIENT = 2;
    }

    enum MsgType {
        GREET = 0;
        ACK = 1;
        ERROR = 2;
    }
}
