syntax = "proto3";

package com.zzh.protocol;
option java_outer_classname = "Single";

message SingleMsg {
    // 消息唯一ID
    int64 id = 1;

    //创建时间
    int64 timeStamp = 2;

    //    会话ID
    int64 sessionId = 3;

    //发送者userId
    string fromId = 4;

    //发送者模块
    Module fromModule = 5;

    //接收者userId
    string destId = 6;

    //接收者模块
    Module destModule = 7;

    //  消息体 json
    string body = 8;

    enum Module {
        CLIENT = 0;
        SERVER = 1;
        TRANSFER = 2;
    }
}